--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,6 +35,15 @@ microservice {
       host = localhost
       port = 9250
     }
+    next-generation-rates {
+      host = localhost
+      port = 1500
+    }
+    ngr-login-register-frontend {
+       protocol = http
+       host = localhost
+       port = 1502
+    }
   }
 }
 
