--- a/conf/application.conf
+++ b/conf/application.conf
@@ -28,8 +28,15 @@ play.http.errorHandler = "uk.gov.hmrc.ngrpropertylinkingfrontend.config.ErrorHan
 # Play Modules
 play.modules.enabled += "uk.gov.hmrc.ngrpropertylinkingfrontend.config.Module"
 
+# Auth Module
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
+
 microservice {
   services {
+      auth {
+          host = localhost
+          port = 8500
+      }
     contact-frontend {
       protocol = http
       host = localhost
