NGR-636: init work

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -21,22 +21,13 @@ play.filters.enabled += play.filters.csp.CSPFilter
 
 # Default http client
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientV2Module"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 
 # Custom error handler
 play.http.errorHandler = "uk.gov.hmrc.ngrpropertylinkingfrontend.config.ErrorHandler"
 
 # Play Modules
 play.modules.enabled += "uk.gov.hmrc.ngrpropertylinkingfrontend.config.Module"
-
-microservice {
-  services {
-    contact-frontend {
-      protocol = http
-      host = localhost
-      port = 9250
-    }
-  }
-}
 
 play.i18n.langCookieHttpOnly: "true"
 
@@ -54,4 +45,22 @@ play.i18n.langs = ["en"]
 #  gtm.container = "<INSERT YOUR GTM CONTAINER LETTER HERE>"
 #}
 
+microservice {
+  services {
+    auth {
+      protocol = http
+      host     = localhost
+      port     = 8500
+    }
+    contact-frontend {
+      protocol = http
+      host = localhost
+      port = 9250
+    }
+    ngr-dashboard-frontend {
+      host = "http://localhost:1503"
+    }
+  }
+}
 
+environment.host = "http://localhost:1504"
