Added in auth action and isRegistered Action along with one login integration

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -31,11 +31,17 @@ play.modules.enabled += "uk.gov.hmrc.ngrpropertylinkingfrontend.config.Module"
 # Auth Module
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 
+# Centralised Authorisation Module
+play.modules.enabled += "centralisedauthorisation.resourceclient.modules.FrontendCentralisedAuthorisationModule"
+
+# Centralised Authorisation Filter
+play.filters.enabled += centralisedauthorisation.resourceclient.filters.ResourceClientFilter
+
 microservice {
   services {
       auth {
-          host = localhost
-          port = 8500
+        host = localhost
+        port = 8500
       }
     contact-frontend {
       protocol = http
@@ -50,6 +56,14 @@ microservice {
        protocol = http
        host = localhost
        port = 1502
+    }
+    centralised-authorisation-server {
+       host = localhost
+       port = 15000
+    }
+    resource-client-store {
+       host = localhost
+       port = 15011
     }
   }
 }
