NGR-636: create add a property page

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -65,6 +65,9 @@ microservice {
        host = localhost
        port = 15011
     }
+    ngr-dashboard-frontend {
+       host = "http://localhost:1503"
+    }
   }
 }
 
