NGR-636: add find a property connector

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -68,6 +68,9 @@ microservice {
     ngr-dashboard-frontend {
        host = "http://localhost:1503"
     }
+    ngr-stub {
+       host = "http://localhost:1501"
+    }
   }
 }
 
