--- a/conf/application.conf
+++ b/conf/application.conf
@@ -16,6 +16,7 @@ include "frontend.conf"
 
 appName = "ngr-property-linking-frontend"
 play.http.router = prod.Routes
+application.logger.name = ${appName}
 
 play.filters.enabled += play.filters.csp.CSPFilter
 
