NGR-636: Adding find a property and no result found pages (#6)
* NGR-636: create add a property page

* NGR-636: adding tests

* NGR-636: adding redirect controller

* NGR-636: fix nav bar text and color

* NGR-636: add find a property connector

* NGR-636: add find a property and no results found controllers

* NGR-636: adding tests

* NGR-636: adding more tests

* NGR-615: rework what you need page (#7)

Co-authored-by: anna-shen-hmrc <anna-shen-hmrc@users.noreply.github.com>

---------

Co-authored-by: anna-shen-hmrc <anna-shen-hmrc@users.noreply.github.com>

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -16,6 +16,7 @@ include "frontend.conf"
 
 appName = "ngr-property-linking-frontend"
 play.http.router = prod.Routes
+application.logger.name = ${appName}
 
 play.filters.enabled += play.filters.csp.CSPFilter
 
@@ -64,6 +65,12 @@ microservice {
     resource-client-store {
        host = localhost
        port = 15011
+    }
+    ngr-dashboard-frontend {
+       host = "http://localhost:1503"
+    }
+    ngr-stub {
+       host = "http://localhost:1501"
     }
   }
 }
