Page is working tests in progress

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,6 +38,8 @@ play.modules.enabled += "centralisedauthorisation.resourceclient.modules.Fronten
 # Centralised Authorisation Filter
 play.filters.enabled += centralisedauthorisation.resourceclient.filters.ResourceClientFilter
 
+play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
+
 microservice {
   services {
       auth {
@@ -78,6 +80,12 @@ microservice {
         port = 9570
     }
   }
+}
+
+time-to-live.time = "3"
+
+mongodb {
+  uri = "mongodb://localhost:27017/ngr-property-linking-frontend"
 }
 
 play.i18n.langCookieHttpOnly: "true"
