NGR-1405 Implementation of first half of Upscan

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -72,6 +72,11 @@ microservice {
     ngr-stub {
        host = "http://localhost:1501"
     }
+    upscan {
+        protocol = http
+        host = localhost
+        port = 9570
+    }
   }
 }
 
