[NGR-1923] Adding vmv connector changing valuations model to match

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -82,6 +82,10 @@ microservice {
         host = localhost
         port = 9570
     }
+    voa-modernised-api {
+        host = localhost
+        port = 9540
+    }
   }
 }
 
@@ -99,11 +103,12 @@ upscan {
       callback-endpoint = "http://localhost:1504/internal/callback-from-upscan"
 }
 
+
 play.i18n.langCookieHttpOnly: "true"
 
 # Change this value to true to enable Welsh translations to be loaded from messages.cy, and to display the language toggle
 features.welsh-language-support = false
-vmvPropertyLookupTestEnabled.enabled = true
+vmvPropertyLookupTestEnabled.enabled = false
 
 # Replace play.i18n.langs with the commented out line below when your service has been fully translated into Welsh
 # to enable Welsh translations for all content, including the standard headers and footers.
