Routes fix internal

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -36,7 +36,7 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 play.modules.enabled += "centralisedauthorisation.resourceclient.modules.FrontendCentralisedAuthorisationModule"
 
 # Centralised Authorisation Filter
-#play.filters.enabled += centralisedauthorisation.resourceclient.filters.ResourceClientFilter
+play.filters.enabled += centralisedauthorisation.resourceclient.filters.ResourceClientFilter
 
 play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
 
