fixed change your answers flow

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -71,6 +71,11 @@ microservice {
     ngr-dashboard-frontend {
        host = "http://localhost:1503"
     }
+    ngr-property-linking-frontend {
+       protocol = http
+       host = localhost
+       port = 1504
+    }
     ngr-stub {
        host = "http://localhost:1501"
     }
