Updated app config to make it easier to override in app-config base

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -72,9 +72,7 @@ microservice {
        host = "http://localhost:1503"
     }
     ngr-property-linking-frontend {
-       protocol = http
-       host = localhost
-       port = 1504
+       host = "http://localhost:1504"
     }
     ngr-stub {
        host = "http://localhost:1501"
