Updated callback to hardcoded route that can be overwritten

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -91,6 +91,14 @@ mongodb {
   uri = "mongodb://localhost:27017/ngr-property-linking-frontend"
 }
 
+upscan {
+      # In a deployed environment, it's important that the callback url that is sent
+      # to upscan-initiate should be the internal host pattern e.g. my-service.protected.mdtp
+      # This is because upscan-initiate does not send the callback over the public internet,
+      # your callback endpoint should not be accessible via the public internet.
+      callback-endpoint = "http://localhost:1504/internal/callback-from-upscan"
+}
+
 play.i18n.langCookieHttpOnly: "true"
 
 # Change this value to true to enable Welsh translations to be loaded from messages.cy, and to display the language toggle
