[NGR-1923] Adding vmv connector changing valuations model to match (#25)
* [NGR-1923] Adding vmv connector changing valuations model to match

* [NGR-1923] Fixing tests and updating read me

* [NGR-1923] Adding Singleton to connector

* [NGR-1923] Rebase fix

* [NGR-1923] To not effect acceptance test swiched config to test mode

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -82,6 +82,10 @@ microservice {
         host = localhost
         port = 9570
     }
+    voa-modernised-api {
+        host = localhost
+        port = 9540
+    }
   }
 }
 
@@ -98,6 +102,7 @@ upscan {
       # your callback endpoint should not be accessible via the public internet.
       callback-endpoint = "http://localhost:1504/internal/callback-from-upscan"
 }
+
 
 play.i18n.langCookieHttpOnly: "true"
 
