--- a/conf/application.conf
+++ b/conf/application.conf
@@ -89,6 +89,8 @@ microservice {
   }
 }
 
+upload-redirect-target-base = "http://localhost:1504"
+
 time-to-live.time = "3"
 
 mongodb {
@@ -100,7 +102,7 @@ upscan {
       # to upscan-initiate should be the internal host pattern e.g. my-service.protected.mdtp
       # This is because upscan-initiate does not send the callback over the public internet,
       # your callback endpoint should not be accessible via the public internet.
-      callback-endpoint = "http://localhost:1504/internal/callback-from-upscan"
+      callback-endpoint = "http://localhost:1504/internal/upscan-callback"
 }
 
 play.i18n.langCookieHttpOnly: "true"
