--- a/conf/application.conf
+++ b/conf/application.conf
@@ -82,10 +82,10 @@ microservice {
         host = localhost
         port = 9570
     }
-    voa-modernised-api {
-        host = localhost
-        port = 9540
-    }
+    vmv {
+         host = localhost
+         port = 9301
+       }
   }
 }
 
@@ -110,7 +110,7 @@ play.i18n.langCookieHttpOnly: "true"
 
 # Change this value to true to enable Welsh translations to be loaded from messages.cy, and to display the language toggle
 features.welsh-language-support = false
-vmvPropertyLookupTestEnabled.enabled = true
+vmvPropertyLookupTestEnabled.enabled = false
 custom-current-date = ""
 
 # Replace play.i18n.langs with the commented out line below when your service has been fully translated into Welsh
