NGR-3182 call POST /property on ngr-notify

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -85,7 +85,11 @@ microservice {
     vmv {
          host = localhost
          port = 9301
-       }
+    }
+    ngr-notify {
+       host = "localhost"
+       port = 1515
+    }
   }
 }
 
