Fix host configuration for ngr-notify

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -87,7 +87,7 @@ microservice {
          port = 9301
     }
     ngr-notify {
-       host = "localhost"
+       host = localhost
        port = 1515
     }
   }
