remove sys.props and enable locally

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -116,7 +116,7 @@ play.i18n.langCookieHttpOnly: "true"
 features.welsh-language-support = false
 vmvPropertyLookupTestEnabled.enabled = true
 custom-current-date = ""
-features.bridgeEnabled = false
+features.bridgeEnabled = true
 
 # Replace play.i18n.langs with the commented out line below when your service has been fully translated into Welsh
 # to enable Welsh translations for all content, including the standard headers and footers.
