--- a/conf/application.conf
+++ b/conf/application.conf
@@ -110,6 +110,10 @@ upscan {
       upload-redirect-target-base = "http://localhost:1504"
 }
 
+auditing {
+  enabled = false
+}
+
 play.i18n.langCookieHttpOnly: "true"
 
 # Change this value to true to enable Welsh translations to be loaded from messages.cy, and to display the language toggle
