--- a/conf/application.conf
+++ b/conf/application.conf
@@ -138,4 +138,4 @@ play.i18n.langs = ["en"]
 #  gtm.container = "<INSERT YOUR GTM CONTAINER LETTER HERE>"
 #}
 
-
+play-frontend-hmrc.forceServiceNavigation = true
