[NGR-3781] Rebasing commit 3

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -96,11 +96,9 @@ microservice {
         port     = 8470
     }
     sdes {
-      client-id = "not-a-key"
-      informationType = "1655996667080"     # test value
-      recipientOrSender = "ngr-property-linking"    # test value
       host = localhost
-      port = 12345
+      port = 9191
+      protocol = http
     }
     vmv {
          host = localhost
@@ -151,13 +149,11 @@ internal-auth.token = "82fac546-6de3-47bb-a1d7-357d68ecd3ac"
 object-store.default-retention-period = 1-day
 
 sdes {
-    stubNotification = true
-    location = "sdes-stub"
-    client-id = "client-id"
-    information-type = "mdr-report"
-    recipient-or-sender = "mdr-reporting"
-    checksum-algorithm = "SHA-256"
-
+  location = "sdes-stub"
+  client-id = "client-id"
+  information-type = "cbc-report"
+  recipient-or-sender = "cbc-reporting"
+  checksum-algorithm = "SHA-256"
 }
 
 # Replace play.i18n.langs with the commented out line below when your service has been fully translated into Welsh
