--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,6 +40,9 @@ play.filters.enabled += centralisedauthorisation.resourceclient.filters.Resource
 
 play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
 
+# Object Store Module
+play.modules.enabled += "uk.gov.hmrc.objectstore.client.play.modules.ObjectStoreModule"
+
 microservice {
   services {
       auth {
@@ -72,7 +75,8 @@ microservice {
        host = "http://localhost:1503"
     }
     ngr-property-linking-frontend {
-       host = "http://localhost:1504"
+       host = localhost
+       port = 1504
     }
     ngr-stub {
        host = "http://localhost:1501"
@@ -81,6 +85,22 @@ microservice {
         protocol = http
         host = localhost
         port = 9570
+    }
+    object-store {
+        host = localhost
+        port = 8464
+    }
+    internal-auth {
+        protocol = http
+        host     = localhost
+        port     = 8470
+    }
+    sdes {
+      client-id = "not-a-key"
+      informationType = "1655996667080"     # test value
+      recipientOrSender = "ngr-property-linking"    # test value
+      host = localhost
+      port = 12345
     }
     vmv {
          host = localhost
@@ -111,7 +131,7 @@ upscan {
 }
 
 auditing {
-  enabled = true
+  enabled = false
 }
 
 play.i18n.langCookieHttpOnly: "true"
@@ -126,6 +146,18 @@ features.welsh-language-support = false
 vmvPropertyLookupTestEnabled.enabled = true
 custom-current-date = ""
 features.bridgeEnabled = true
+internal-auth.token = "82fac546-6de3-47bb-a1d7-357d68ecd3ac"
+object-store.default-retention-period = 1-day
+
+sdes {
+    stubNotification = false
+    location = "sdes-stub"
+    client-id = "client-id"
+    information-type = "mdr-report"
+    recipient-or-sender = "mdr-reporting"
+    checksum-algorithm = "SHA-256"
+
+}
 
 # Replace play.i18n.langs with the commented out line below when your service has been fully translated into Welsh
 # to enable Welsh translations for all content, including the standard headers and footers.
