--- a/conf/application.conf
+++ b/conf/application.conf
@@ -146,11 +146,12 @@ features.welsh-language-support = false
 vmvPropertyLookupTestEnabled.enabled = true
 custom-current-date = ""
 features.bridgeEnabled = true
+features.stubNotification = false
 internal-auth.token = "82fac546-6de3-47bb-a1d7-357d68ecd3ac"
 object-store.default-retention-period = 1-day
 
 sdes {
-    stubNotification = false
+    stubNotification = true
     location = "sdes-stub"
     client-id = "client-id"
     information-type = "mdr-report"
