[NGR-3781] Adding object store and connection to SDES (#96)
* [NGR-3781] Rebasing commit 1

* [NGR-3781] Rebasing commit 2

* [NGR-3781] Rebasing commit 3

* [NGR-3781] Rebasing commit 4

* [NGR-3781] Adding extra tests

* [NGR-3781] Code clean-up

* [NGR-3781] Code clean-up

* [NGR-3781] Requested changes added

* [NGR-3781] Increasing timeout

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,6 +40,9 @@ play.filters.enabled += centralisedauthorisation.resourceclient.filters.Resource
 
 play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
 
+# Object Store Module
+play.modules.enabled += "uk.gov.hmrc.objectstore.client.play.modules.ObjectStoreModule"
+
 microservice {
   services {
       auth {
@@ -72,7 +75,8 @@ microservice {
        host = "http://localhost:1503"
     }
     ngr-property-linking-frontend {
-       host = "http://localhost:1504"
+       host = localhost
+       port = 1504
     }
     ngr-stub {
        host = "http://localhost:1501"
@@ -81,6 +85,20 @@ microservice {
         protocol = http
         host = localhost
         port = 9570
+    }
+    object-store {
+        host = localhost
+        port = 8464
+    }
+    internal-auth {
+        protocol = http
+        host     = localhost
+        port     = 8470
+    }
+    sdes {
+      host = localhost
+      port = 9191
+      protocol = http
     }
     vmv {
          host = localhost
@@ -111,7 +129,7 @@ upscan {
 }
 
 auditing {
-  enabled = true
+  enabled = false
 }
 
 play.i18n.langCookieHttpOnly: "true"
@@ -126,6 +144,17 @@ features.welsh-language-support = false
 vmvPropertyLookupTestEnabled.enabled = true
 custom-current-date = ""
 features.bridgeEnabled = true
+features.stubNotification = false
+internal-auth.token = "82fac546-6de3-47bb-a1d7-357d68ecd3ac"
+object-store.default-retention-period = 1-day
+
+sdes {
+  location = "sdes-stub"
+  client-id = "client-id"
+  information-type = "cbc-report"
+  recipient-or-sender = "cbc-reporting"
+  checksum-algorithm = "SHA-256"
+}
 
 # Replace play.i18n.langs with the commented out line below when your service has been fully translated into Welsh
 # to enable Welsh translations for all content, including the standard headers and footers.
